# device-info

./: .gitignore
device-info-aggregator/: Cargo.toml
device-info-aggregator/src/: info.rs  main.rs  web.rs
device-info-aggregator/src/domain/: bat.rs
device-info-aggregator/src/info/: bat_service.rs
device-info-aggregator/src/web/: device_crud.rs  device_info.rs
system-info-rs/: Cargo.toml
system-info-rs/src/: main.rs  web.rs
system-info-rs/src/info/: bat.rs
system-info-rs/src/web/: web_controller.rs
