[package]
name = "device-info-aggregator"
version = "0.1.0"
authors = ["david"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
battery = "0.7.7"
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
